dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 15,   b : 7\n"
+      "a : 31,   b : 7\n"
      ]
     }
    ],
@@ -27,20 +27,13 @@
    "source": [
     "def calc_gcd(n):\n",
     "    global a, b\n",
-    "    if n == 0:\n",
-    "        return a\n",
-    "    elif n == 1:\n",
-    "        return b\n",
-    "    \n",
-    "    if calc_gcd(n) % calc_gcd(n+1) == 0:\n",
-    "        return calc_gcd(n+1)\n",
-    "    elif calc_gcd(n) % calc_gcd(n+1) == 1:\n",
-    "        return 1"
+    "    if n == 0 or n == 1:\n",
+    "        r = a % b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +42,9 @@
     "def calc_gcd(a, b):\n",
     "    global i\n",
     "    r = a % b\n",
-    "    print(\"{i}번째 재귀 시작합니다.\")\n",
-    "    r = b % calc_gcd(b, r)\n",
+    "    print(f\"{i}번째 재귀 시작합니다.\")\n",
+    "    if b != 0:\n",
+    "        r = b % calc_gcd(b, r)\n",
     "    print(f\"{i}번째 재귀 종료합니다.\")\n",
     "    i += 1    \n",
     "    return r"
@@ -58,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{i}번째 재귀 시작합니다.\n",
-      "{i}번째 재귀 시작합니다.\n"
+      "0번째 재귀 시작합니다.\n",
+      "0번째 재귀 시작합니다.\n"
      ]
     },
     {
@@ -77,9 +71,9 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
       "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m calc_gcd(\u001b[39m15\u001b[39;49m, \u001b[39m7\u001b[39;49m)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m r \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39m b\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m{i}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)    \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m r\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m r \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39m b\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m{i}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)    \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m r\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalc_gcd\u001b[39m(a, b):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mglobal\u001b[39;00m i\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     r \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39;49m b\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m{i}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalc_gcd\u001b[39m(a, b):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mglobal\u001b[39;00m i\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     r \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39;49m b\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
      ]
     }
@@ -118,6 +112,19 @@
    ],
    "source": [
     "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_gcd(a, b):\n",
+    "    c = a % b    \n",
+    "    if c == 0 or c == 1:\n",
+    "        return b, c\n",
+    "    calc_gcd(b, c)"
    ]
   }
  ],
