--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -116,15 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_gcd(a, b):\n",
-    "    c = a % b    \n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\")  \n",
     "    if c == 0 or c == 1:\n",
     "        return b, c\n",
     "    calc_gcd(b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_gcd(350, 17)"
    ]
   }
  ],
