--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -130,11 +130,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 192, b :162, c : 30\n",
+      "a : 162, b :30, c : 12\n",
+      "a : 30, b :12, c : 6\n",
+      "a : 12, b :6, c : 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "162"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_gcd(192, 162)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "calc_gcd(350, 17)"
+    "def calc_gcd(a, b):\n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\")\n",
+    "    #return b, c    \n",
+    "    \n",
+    "    if c == 0:\n",
+    "        return b    \n",
+    "    elif c == 1:\n",
+    "        return c\n",
+    "    else:   \n",
+    "        calc_gcd(b, c)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_gcd(a, b):\n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\")\n",
+    "    \n",
+    "    if c == 1:\n",
+    "        return 1    \n",
+    "    else:\n",
+    "        return b\n",
+    "    \n",
+    "    calc_gcd(b, c)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_gcd(a, b):\n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\")    \n",
+    "    \n",
+    "    if c == 0:\n",
+    "        return b    \n",
+    "    elif c == 1:\n",
+    "        return c\n",
+    "    \n",
+    "    calc_gcd(b, c)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def calc_gcd(a, b):\n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\") \n",
+    "    \n",
+    "    calc_gcd(b, c)   \n",
+    "    \n",
+    "    if c == 0:\n",
+    "        return b    \n",
+    "    elif c == 1:\n",
+    "        return c\n",
+    "    \n",
+    "      "
    ]
   }
  ],
