dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -161,7 +161,7 @@
     "    if c == 0:\n",
     "        return b    \n",
     "    elif c == 1:\n",
-    "        return c\n",
+    "        return 1\n",
     "    else:   \n",
     "        calc_gcd(b, c)       "
    ]
