--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +164,42 @@
     "        return 1\n",
     "    else:   \n",
     "        calc_gcd(b, c)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_gcd(a, b):\n",
+    "    c = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, c : {c}\")  \n",
+    "    \n",
+    "    if c == 0:\n",
+    "        return b  \n",
+    "    elif c == 1:\n",
+    "        return 1 \n",
+    "    \n",
+    "    calc_gcd(b, c)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 84, b :17, c : 16\n",
+      "a : 17, b :16, c : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc_gcd(84, 17)"
    ]
   }
  ],
