--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -21,136 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_gcd(n):\n",
-    "    global a, b\n",
-    "    if n == 0 or n == 1:\n",
-    "        r = a % b\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 0\n",
-    "\n",
-    "def calc_gcd(a, b):\n",
-    "    global i\n",
-    "    r = a % b\n",
-    "    print(f\"{i}번째 재귀 시작합니다.\")\n",
-    "    if b != 0:\n",
-    "        r = b % calc_gcd(b, r)\n",
-    "    print(f\"{i}번째 재귀 종료합니다.\")\n",
-    "    i += 1    \n",
-    "    return r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0번째 재귀 시작합니다.\n",
-      "0번째 재귀 시작합니다.\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "integer division or modulo by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m calc_gcd(\u001b[39m15\u001b[39;49m, \u001b[39m7\u001b[39;49m)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     r \u001b[39m=\u001b[39m b \u001b[39m%\u001b[39m calc_gcd(b, r)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 종료합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 4\u001b[0m line \u001b[0;36mcalc_gcd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalc_gcd\u001b[39m(a, b):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mglobal\u001b[39;00m i\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     r \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39;49m b\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m번째 재귀 시작합니다.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mif\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
-     ]
-    }
-   ],
-   "source": [
-    "calc_gcd(15, 7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def factorial(n):\n",
-    "    if n == 1:\n",
-    "        return 1\n",
-    "    return n * factorial(n-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factorial(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_gcd(a, b):\n",
-    "    c = a % b  \n",
-    "    print(f\"a : {a}, b :{b}, c : {c}\")  \n",
-    "    if c == 0 or c == 1:\n",
-    "        return b, c\n",
-    "    calc_gcd(b, c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a : 192, b :162, c : 30\n",
-      "a : 162, b :30, c : 12\n",
-      "a : 30, b :12, c : 6\n",
-      "a : 12, b :6, c : 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "calc_gcd(192, 162)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,38 +39,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_gcd(a, b):\n",
-    "    c = a % b  \n",
-    "    print(f\"a : {a}, b :{b}, c : {c}\")  \n",
-    "    \n",
-    "    if c == 0:\n",
-    "        return b  \n",
-    "    elif c == 1:\n",
-    "        return 1 \n",
-    "    \n",
-    "    calc_gcd(b, c)       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 84, b :17, c : 16\n",
-      "a : 17, b :16, c : 1\n"
+      "a : 81, b :17, c : 13\n",
+      "a : 17, b :13, c : 4\n",
+      "a : 13, b :4, c : 1\n"
      ]
     }
    ],
    "source": [
-    "calc_gcd(84, 17)"
+    "calc_gcd(81, 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_gcd(840, 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = calc_gcd(840, 17)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x, y):\n",
+    "    z = x + y\n",
+    "    if z == 0:\n",
+    "        return y\n",
+    "    if z == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return z    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(4, 8)"
    ]
   }
  ],
