--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a : 31,   b : 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "a, b = map(int, input().split())\n",
-    "a, b = (a, b) if a >= b else (b, a)\n",
-    "print(f\"a : {a},   b : {b}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +15,12 @@
     "    elif c == 1:\n",
     "        return 1\n",
     "    else:   \n",
-    "        calc_gcd(b, c)       "
+    "        return calc_gcd(b, c)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +31,16 @@
       "a : 17, b :13, c : 4\n",
       "a : 13, b :4, c : 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -69,16 +60,25 @@
       "a : 17, b :7, c : 3\n",
       "a : 7, b :3, c : 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = calc_gcd(840, 17)\n",
-    "x"
+    "calc_gcd(840, 17)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,16 @@
       "a : 30, b :12, c : 6\n",
       "a : 12, b :6, c : 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
