dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -105,6 +105,37 @@
    "source": [
     "calc_gcd(192, 162)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 843, b :123, c : 105\n",
+      "a : 123, b :105, c : 18\n",
+      "a : 105, b :18, c : 15\n",
+      "a : 18, b :15, c : 3\n",
+      "a : 15, b :3, c : 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_gcd(843, 123)"
+   ]
   }
  ],
  "metadata": {
