dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_gcd(a, b):\n",
-    "    c = a % b  \n",
-    "    print(f\"a : {a}, b :{b}, c : {c}\")  \n",
+    "    r = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
-    "    if c == 0:\n",
+    "    if r == 0:\n",
     "        return b  \n",
-    "    elif c == 1:\n",
+    "    elif r == 1:\n",
     "        return 1\n",
     "    else:   \n",
-    "        return calc_gcd(b, c)       "
+    "        return calc_gcd(b, r)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 81, b :17, c : 13\n",
-      "a : 17, b :13, c : 4\n",
-      "a : 13, b :4, c : 1\n"
+      "a : 81, b :17, r : 13\n",
+      "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
        "1"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 840, b :17, c : 7\n",
-      "a : 17, b :7, c : 3\n",
-      "a : 7, b :3, c : 1\n"
+      "a : 840, b :17, r : 7\n",
+      "a : 17, b :7, r : 3\n",
+      "a : 7, b :3, r : 1\n"
      ]
     },
     {
@@ -67,7 +67,7 @@
        "1"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 192, b :162, c : 30\n",
-      "a : 162, b :30, c : 12\n",
-      "a : 30, b :12, c : 6\n",
-      "a : 12, b :6, c : 0\n"
+      "a : 192, b :162, r : 30\n",
+      "a : 162, b :30, r : 12\n",
+      "a : 30, b :12, r : 6\n",
+      "a : 12, b :6, r : 0\n"
      ]
     },
     {
@@ -97,7 +97,7 @@
        "6"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,18 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 843, b :123, c : 105\n",
-      "a : 123, b :105, c : 18\n",
-      "a : 105, b :18, c : 15\n",
-      "a : 18, b :15, c : 3\n",
-      "a : 15, b :3, c : 0\n"
+      "a : 843, b :123, r : 105\n",
+      "a : 123, b :105, r : 18\n",
+      "a : 105, b :18, r : 15\n",
+      "a : 18, b :15, r : 3\n",
+      "a : 15, b :3, r : 0\n"
      ]
     },
     {
@@ -128,13 +128,63 @@
        "3"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calc_gcd(843, 123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(434980, 1911)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "91*4780,  91*21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 434980, b :19110, r : 14560\n",
+      "a : 19110, b :14560, r : 4550\n",
+      "a : 14560, b :4550, r : 910\n",
+      "a : 4550, b :910, r : 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "910"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_gcd(434980, 19110)"
    ]
   }
  ],
