More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,6 +20,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_gcd(a, b):\n",
+    "    r = a % b  \n",
+    "    print(f\"a : {a}, b :{b}, r : {r}\")  \n",
+    "    \n",
+    "    if r == 0:\n",
+    "        return b  \n",
+    "    elif r == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print(f\"return value : {calc_gcd(b, r)}\")   \n",
+    "        return calc_gcd(b, r)       "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 132,
    "metadata": {},
    "outputs": [
