More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,14 @@
     "    elif r == 1:\n",
     "        return 1\n",
     "    else:\n",
-    "        print(f\"return value : {calc_gcd(b, r)}\")   \n",
+    "        print(f\"return value : {calc_gcd(b, r)}\")\n",
+    "        print()   \n",
     "        return calc_gcd(b, r)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +49,13 @@
      "text": [
       "a : 81, b :17, r : 13\n",
       "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
+      "return value : 1\n",
+      "a : 13, b :4, r : 1\n",
+      "return value : 1\n",
+      "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
+      "return value : 1\n",
       "a : 13, b :4, r : 1\n"
      ]
     },
@@ -57,7 +65,7 @@
        "1"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
