More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_gcd(a, b):\n",
     "    r = a % b  \n",
-    "    print(f\"a : {a}, b :{b}, r : {r}\")  \n",
+    "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
     "        return b  \n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +51,14 @@
       "a : 17, b :13, r : 4\n",
       "a : 13, b :4, r : 1\n",
       "return value : 1\n",
+      "\n",
       "a : 13, b :4, r : 1\n",
       "return value : 1\n",
+      "\n",
       "a : 17, b :13, r : 4\n",
       "a : 13, b :4, r : 1\n",
       "return value : 1\n",
+      "\n",
       "a : 13, b :4, r : 1\n"
      ]
     },
@@ -65,7 +68,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
