More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_gcd(a, b):\n",
     "    r = a % b  \n",
-    "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
+    "    print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
     "        return b  \n",
@@ -40,26 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 81, b :17, r : 13\n",
-      "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
-      "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
-      "\n",
-      "a : 13, b :4, r : 1\n"
+      "\n"
      ]
     },
     {
@@ -68,7 +61,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
