More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,19 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_gcd(a, b):\n",
     "    r = a % b  \n",
-    "    print(f\"a : {a}, b :{b}, r : {r}\")  \n",
+    "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
     "        return b  \n",
     "    elif r == 1:\n",
     "        return 1\n",
     "    else:\n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
     "        print(f\"return value : {calc_gcd(b, r)}\")\n",
     "        print()   \n",
     "        return calc_gcd(b, r)       "
@@ -40,19 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "a : 81, b :17, r : 13\n",
+      "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
+      "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
-      "\n"
+      "\n",
+      "a : 13, b :4, r : 1\n"
      ]
     },
     {
@@ -61,7 +69,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
