--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,10 @@
     "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
     "        return b  \n",
     "    elif r == 1:\n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
     "        return 1\n",
     "    else:\n",
     "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -50,17 +52,13 @@
      "text": [
       "a : 81, b :17, r : 13\n",
       "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
       "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
-      "\n",
-      "a : 13, b :4, r : 1\n"
+      "\n"
      ]
     },
     {
@@ -69,7 +67,7 @@
        "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
