--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
     "        return 1\n",
     "    else:\n",
     "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
-    "        print(f\"return value : {calc_gcd(b, r)}\")\n",
+    "        #print(f\"return value : {calc_gcd(b, r)}\")\n",
     "        print()   \n",
     "        return calc_gcd(b, r)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,13 +52,17 @@
      "text": [
       "a : 81, b :17, r : 13\n",
       "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
       "\n",
       "a : 17, b :13, r : 4\n",
+      "a : 13, b :4, r : 1\n",
       "return value : 1\n",
-      "\n"
+      "\n",
+      "a : 13, b :4, r : 1\n"
      ]
     },
     {
@@ -67,7 +71,7 @@
        "1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
