--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,49 +20,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_gcd(a, b):\n",
+    "def calc_gcd(a, b, i=0):\n",
+    "    i += 1\n",
     "    r = a % b  \n",
     "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
-    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
+    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
     "        return b  \n",
     "    elif r == 1:\n",
-    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
+    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
     "        return 1\n",
     "    else:\n",
-    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
+    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
     "        #print(f\"return value : {calc_gcd(b, r)}\")\n",
-    "        print()   \n",
+    "        print()           \n",
     "        return calc_gcd(b, r)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 81, b :17, r : 13\n",
-      "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
-      "return value : 1\n",
+      "i : 0, a : 81, b :17, r : 13\n",
       "\n",
-      "a : 13, b :4, r : 1\n",
-      "return value : 1\n",
+      "i : 0, a : 17, b :13, r : 4\n",
       "\n",
-      "a : 17, b :13, r : 4\n",
-      "a : 13, b :4, r : 1\n",
-      "return value : 1\n",
-      "\n",
-      "a : 13, b :4, r : 1\n"
+      "i : 0, a : 13, b :4, r : 1\n"
      ]
     },
     {
@@ -71,7 +64,7 @@
        "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
