More on dbn_recursive_fcn_01.ipynb

--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,15 @@
     "    #print(f\"a : {a}, b :{b}, r : {r}\")  \n",
     "    \n",
     "    if r == 0:\n",
-    "        i += 1\n",
-    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
-    "        return b  \n",
-    "    elif r == 1:\n",
-    "        i += 1\n",
-    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
+    "        return b\n",
+    "      \n",
+    "    elif r == 1: \n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
     "        return 1\n",
+    "    \n",
     "    else:\n",
-    "        i += 1\n",
-    "        print(f\"i : {i}, a : {a}, b :{b}, r : {r}\") \n",
+    "        print(f\"a : {a}, b :{b}, r : {r}\") \n",
     "        #print(f\"return value : {calc_gcd(b, r)}\")\n",
     "        print()           \n",
     "        return calc_gcd(b, r)       "
@@ -46,18 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i : 1, a : 81, b :17, r : 13\n",
+      "i : 0, a : 81, b :17, r : 13\n",
       "\n",
-      "i : 1, a : 17, b :13, r : 4\n",
+      "i : 0, a : 17, b :13, r : 4\n",
       "\n",
-      "i : 1, a : 13, b :4, r : 1\n"
+      "i : 0, a : 13, b :4, r : 1\n"
      ]
     },
     {
@@ -66,7 +65,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,17 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a : 192, b :162, r : 30\n",
-      "a : 162, b :30, r : 12\n",
-      "a : 30, b :12, r : 6\n",
-      "a : 12, b :6, r : 0\n"
+      "i : 0, a : 192, b :162, r : 30\n",
+      "\n",
+      "i : 0, a : 162, b :30, r : 12\n",
+      "\n",
+      "i : 0, a : 30, b :12, r : 6\n",
+      "\n",
+      "i : 0, a : 12, b :6, r : 0\n"
      ]
     },
     {
@@ -125,7 +127,7 @@
        "6"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
