--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,29 @@
     "        if not visited[i]:\n",
     "            dfs(graph, i, visited)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = [[0] * 5 for _ in range(4)]\n",
+    "\n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
@@ -23,7 +46,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
