dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -32,11 +32,19 @@
     }
    ],
    "source": [
-    "graph = [[0] * 5 for _ in range(4)]\n",
+    "n, m = map(int, input().split())\n",
+    "graph = [[0] * m for _ in range(n)]\n",
     "\n",
     "for row in graph:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
