dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,21 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfs(graph, v, visited):\n",
-    "    visited[v] = True\n",
-    "    print(v, end=' ')\n",
-    "    \n",
-    "    for i in graph[v]:\n",
-    "        if not visited[i]:\n",
-    "            dfs(graph, i, visited)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -45,10 +30,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "visited = [[False] * m for _ in range(m)]\n",
+    "for row in visited:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    visited[i][j] = True\n",
+    "    print((i, j), end=' ')\n",
+    "    \n",
+    "    for k in range(len(graph)):\n",
+    "        for l in range(len(graph(l))):     \n",
+    "            if not graph[k][l] and not visited[k][l]:\n",
+    "                dfs(graph, k, l, visited)"
+   ]
   }
  ],
  "metadata": {
