--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -40,20 +40,19 @@
       "[False, False, False, False, False]\n",
       "[False, False, False, False, False]\n",
       "[False, False, False, False, False]\n",
-      "[False, False, False, False, False]\n",
       "[False, False, False, False, False]\n"
      ]
     }
    ],
    "source": [
-    "visited = [[False] * m for _ in range(m)]\n",
+    "visited = [[False] * m for _ in range(n)]\n",
     "for row in visited:\n",
     "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,37 +62,46 @@
     "    \n",
     "    for k in range(len(graph)):\n",
     "        for l in range(len(graph[k])):     \n",
-    "            if not graph[k][l] and not visited[k][l]:\n",
+    "            if graph[k][l] == 0 and not visited[k][l]:\n",
     "                dfs(graph, k, l, visited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 4\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dfs(graph, \u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, visited)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 4\u001b[0m line \u001b[0;36mdfs\u001b[1;34m(graph, i, j, visited)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m((i, j), end\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(graph)):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(graph(k))):     \n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m graph[k][l] \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m visited[k][l]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m             dfs(graph, k, l, visited)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+      "(0, 0) (0, 1) (0, 4) (1, 0) (1, 1) (1, 2) (3, 0) (3, 1) (3, 2) (3, 3) (3, 4) "
      ]
     }
    ],
    "source": [
     "dfs(graph, 0, 0, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, False, False, True]\n",
+      "[True, True, True, False, False]\n",
+      "[False, False, False, False, False]\n",
+      "[True, True, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in visited:\n",
+    "    print(row)"
    ]
   }
  ],
