dbn_dfs_bfs_01.ipynb

--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +62,49 @@
     "    \n",
     "    for k in range(len(graph)):\n",
     "        for l in range(len(graph[k])):     \n",
-    "            if graph[k][l] == 0 and not visited[k][l]:\n",
+    "            if not graph[k][l] and not visited[k][l]:\n",
     "                dfs(graph, k, l, visited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnt = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, i, j, visited):\n",
+    "    global cnt\n",
+    "    visited[i][j] = True\n",
+    "    print((i, j), end=' ')\n",
+    "    \n",
+    "    for k in range(len(graph)):\n",
+    "        for l in range(len(graph[k])):\n",
+    "            if graph[k][l]:\n",
+    "                cnt += 1\n",
+    "                break\n",
+    "            if not graph[k][l] and not visited[k][l]:\n",
+    "                dfs(graph, k, l, visited)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) (0, 1) (0, 4) (1, 0) (1, 1) (1, 2) (3, 0) (3, 1) (3, 2) (3, 3) (3, 4) "
+      "(0, 0) (1, 0) (1, 1) (1, 2) (3, 0) (3, 1) (3, 2) (3, 3) (3, 4) "
      ]
     }
    ],
@@ -85,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
