--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,53 +88,22 @@
     "    \n",
     "    for k in range(len(graph)):\n",
     "        for l in range(len(graph[k])):\n",
-    "            if graph[k][l]:\n",
-    "                cnt += 1\n",
-    "                print(f\"{(i, j)} : {cnt}\")\n",
-    "                continue\n",
+    "            if graph[k][l] == 1 and k < len(graph):\n",
+    "                dfs(graph, k+1, 0, visited)\n",
     "            if not graph[k][l] and not visited[k][l]:\n",
     "                dfs(graph, k, l, visited)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) (0, 1) (0, 1) : 1\n",
-      "(1, 0) (1, 0) : 2\n",
-      "(1, 1) (1, 1) : 3\n",
-      "(1, 2) (1, 2) : 4\n",
-      "(1, 2) : 5\n",
-      "(1, 2) : 6\n",
-      "(3, 0) (3, 0) : 7\n",
-      "(3, 0) : 8\n",
-      "(3, 0) : 9\n",
-      "(3, 1) (3, 1) : 10\n",
-      "(3, 1) : 11\n",
-      "(3, 1) : 12\n",
-      "(3, 2) (3, 2) : 13\n",
-      "(3, 2) : 14\n",
-      "(3, 2) : 15\n",
-      "(3, 3) (3, 3) : 16\n",
-      "(3, 3) : 17\n",
-      "(3, 3) : 18\n",
-      "(3, 4) (3, 4) : 19\n",
-      "(3, 4) : 20\n",
-      "(3, 4) : 21\n",
-      "(1, 1) : 22\n",
-      "(1, 1) : 23\n",
-      "(1, 0) : 24\n",
-      "(1, 0) : 25\n",
-      "(0, 1) : 26\n",
-      "(0, 1) : 27\n",
-      "(0, 0) : 28\n",
-      "(0, 0) : 29\n",
-      "(0, 0) : 30\n"
+      "(0, 0) (0, 1) (0, 4) (1, 0) (1, 1) (1, 2) (3, 0) (3, 1) (3, 2) (3, 3) (3, 4) "
      ]
     }
    ],
